[gd_scene load_steps=3 format=3 uid="uid://1najobv5dww8"]

[ext_resource type="Script" path="res://title/title.gd" id="1_vs2ow"]

[sub_resource type="LabelSettings" id="LabelSettings_jvuqo"]
font_size = 80

[node name="title" type="Node"]
script = ExtResource("1_vs2ow")

[node name="Ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="VBoxContainer" parent="Ui"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
theme_override_constants/separation = 25
alignment = 1
metadata/_edit_lock_ = true

[node name="TitleLabel" type="Label" parent="Ui/Title"]
layout_mode = 2
text = "Sustainable Development Game"
label_settings = SubResource("LabelSettings_jvuqo")
horizontal_alignment = 1

[node name="GameStartButton" type="Button" parent="Ui/Title"]
custom_minimum_size = Vector2(400, 120)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 60
text = "ゲームスタート"

[node name="MyScoreButton" type="Button" parent="Ui/Title"]
custom_minimum_size = Vector2(400, 120)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 60
text = "マイスコア"

[node name="HowToPlayButton" type="Button" parent="Ui/Title"]
custom_minimum_size = Vector2(400, 120)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 60
text = "遊び方"

[connection signal="pressed" from="Ui/Title/GameStartButton" to="." method="_on_game_start_button_pressed"]
[connection signal="pressed" from="Ui/Title/MyScoreButton" to="." method="_on_my_score_button_pressed"]
[connection signal="pressed" from="Ui/Title/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
